--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,8 @@ src/static_root
 # Backup files # 
 *.bak 
 
-# If you are using PyCharm # 
+# If you are using PyCharm #
+.idea
 .idea/**/workspace.xml 
 .idea/**/tasks.xml 
 .idea/dictionaries 
